# limbo-rs

./: .envrc  .gitignore  Cargo.toml  flake.nix
nix/: home-manager.nix  modules.nix  nixos.nix  options.nix
src/: animation.rs  bar.rs  components.rs  hyprland_listener.rs  icons.rs  main.rs  message.rs  tray.rs
src/components/: mod.rs
src/config/: mod.rs  types.rs
src/desktop_environment/: hyprland_desktop.rs  mod.rs  niri_desktop.rs
src/sections/: clock.rs  mod.rs  sysmon.rs
src/sections/quick_settings/: mod.rs  tray.rs
src/sections/workspaces/: mod.rs  state.rs
