[package]
name = "limbo"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/pop-os/iced.git", rev = "8cbf2b7", features = ["advanced", "image", "svg", "tokio", "wayland", "winit"] }
jiff = "0.2.16"
rust-embed = "8.9.0"
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
tokio = { version = "1.48.0", features = ["full"] }

hyprland = { version = "0.4.0-beta.3", optional = true }
niri-ipc = { version = "25.8.0", optional = true }
serde_json = { version = "1.0.145", optional = true }
sysinfo = "0.37.2"

[features]
default = ["hyprland", "niri"]
hyprland = ["dep:hyprland"]
niri = ["dep:niri-ipc", "dep:serde_json"]
