[package]
name = "limbo"
version = "0.1.0"
edition = "2024"

[dependencies]
battery = "0.7.8"
clap = { version = "4.5.53", features = ["derive"] }
color = "0.3.2"
config = "0.15.19"
dirs = "6.0.0"
freedesktop-icons = "0.4.0"
hyprland = { version = "0.4.0-beta.3", optional = true }
iced = { git = "https://github.com/pop-os/iced.git", rev = "c9cd78e", features = [
  "advanced",
  "image",
  "svg",
  "tokio",
  "wayland",
  "winit"
] }
jiff = "0.2.16"
niri-ipc = { version = "25.8.0", optional = true }
rust-embed = "8.9.0"
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
sysinfo = "0.37.2"
system-tray = "0.8.4"
tokio = { version = "1.48.0", features = ["full"] }
zbus = { version = "5.12.0", features = ["tokio"] }

[features]
default = ["hyprland", "niri"]
hyprland = ["dep:hyprland"]
niri = ["dep:niri-ipc", "dep:serde_json"]
